Add custom caller generation